# qt-recipe-app

./: .gitignore  CMakeLists.txt  Makefile  compile_commands.json  main.cpp  resources.qrc
qt/: MainWindow.cpp  MainWindow.h  MainWindow.ui
qt/dialogs/: IngredientsDialog.cpp  IngredientsDialog.h  SearchDialog.cpp  SearchDialog.h
qt/main_window/: MainWindow.cpp  MainWindow.h  MainWindow.ui
qt/recipe/: RecipeCard.cpp  RecipeCard.h  RecipeDetails.cpp  RecipeDetails.h  RecipeGrid.cpp  RecipeGrid.h
qt/tools/: FileDownloader.cpp  FileDownloader.h  Tools.cpp  Tools.h
qt/widgets/: QClickableImage.cpp  QClickableImage.h  QIconLabel.cpp  QIconLabel.h
recipe/: Ingredient.cpp  Ingredient.h  Instruction.cpp  Instruction.h  Measure.cpp  Measure.h  Recipe.cpp  Recipe.h  RecipeFavourite.cpp  RecipeFavourite.h
recipe/elements/: Ingredient.cpp  Ingredient.h  Instruction.cpp  Instruction.h  Measure.cpp  Measure.h
recipe/scrapper/: Scrapper.cpp  Scrapper.h
scrapper/: Scrapper.cpp  Scrapper.h
